// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackerCard /> by default matches with snapshot 1`] = `
<div
  className="backer-card__StyledCard-zl7grf-0 gsEDhg"
>
  <div
    className="marger__StyledMarger-q3lecu-0 oFTgH"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-tiny k-u-weight-regular"
    >
      Backer name
    </span>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 iHUjQx"
  >
    <span
      className="k-ButtonImage k-ButtonImage--huge k-ButtonImage--withoutPointerEvents backer-card__StyledButtonImage-zl7grf-2 kXvuno"
      tabIndex={null}
    >
      <img
        alt=""
        className="k-ButtonImage__img"
        src="#custom-src"
      />
    </span>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 kEQuBT"
  >
    <p
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light k-u-margin-none"
    >
      Description
    </p>
  </div>
</div>
`;

exports[`<BackerCard /> with subtitle prop matches with snapshot 1`] = `
<div
  className="backer-card__StyledCard-zl7grf-0 gsEDhg"
>
  <div
    className="marger__StyledMarger-q3lecu-0 oFTgH"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-tiny k-u-weight-regular"
    >
      Backer name
      <span
        className="k-u-color-font1 k-u-size-micro k-u-weight-light backer-card__StyledSubtitle-zl7grf-1 iRGyso"
      >
        Subtitle
      </span>
    </span>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 iHUjQx"
  >
    <span
      className="k-ButtonImage k-ButtonImage--huge k-ButtonImage--withoutPointerEvents backer-card__StyledButtonImage-zl7grf-2 kXvuno"
      tabIndex={null}
    >
      <img
        alt=""
        className="k-ButtonImage__img"
        src="#custom-src"
      />
    </span>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 kEQuBT"
  >
    <p
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light k-u-margin-none"
    >
      Description
    </p>
  </div>
</div>
`;
